--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,18 @@
 </head>
 
 <body>
-
+    <div id="messages" class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2 d-flex flex-row justify-content-center">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show mt-3" id="msg" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
     <nav class="navbar navbar-expand-sm bg-light">
         <div class="container-fluid">
 
@@ -29,19 +40,6 @@
                     <img id="logo" src="/static/images/blue-mountains-trans.png" alt="Reach logo">
                 </div>
             </a>
-
-            <div id="messages" class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        {% for message in messages %}
-                        <div class="alert {{ message.tags }} alert-dismissible fade show bg-none" id="msg" role="alert">
-                            {{ message | safe }}
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
                 aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
