--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -20,7 +20,7 @@
                 {% trans "Welcome back to Reach.<br>We hope your adventures were a success." %}
             </h4>
 
-            <form class="login col-12 border-bottom border-primary pb-3" method="POST" action="{% url 'account_login' %}">
+            <form class="login col-12 pb-2" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 {{ form|crispy }}
                 {% if redirect_field_value %}
@@ -28,6 +28,9 @@
                 {% endif %}
                 <button class="primaryAction btn signup_button col-12" type="submit">{% trans "Login" %}</button>
             </form>
+                <a href="{% url 'account_reset_password' %}" class="text-center border-bottom border-primary col-12 col-md-9 pb-3">
+                    Forgot Password
+                </a>
             <h5 class="mt-3 text-center">
                 {% blocktrans %}Want to join the community?
             </h5>
