--- a/templates/account.html
+++ b/templates/account.html
@@ -14,6 +14,11 @@
                 <i class="fa-solid fa-user"></i>
                 {{ user.username }}
             </h4>
+            {% if user.is_superuser %}
+            <h4 class="text-center">
+                <i class="fa-solid fa-toolbox"></i> Reach Admin
+            </h4>
+            {% endif %}
             <h4 class="text-center">
                 <i class="fa-solid fa-at"></i>
                 {{ user.email }}
@@ -27,6 +32,9 @@
                 <a href="{% url 'update_account' %}" class="text-info">Edit Account</a>
                 <a href="#" class="text-danger ms-1" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">Delete Account</a>
             </div>
+            {% if user.is_superuser %}
+            <a href="{% url 'admin:index' %}" class="text-warning">Admin Panel</a>
+            {% endif %}
         </div>
     </div>
 </div>
