--- a/static/css/style.css
+++ b/static/css/style.css
@@ -338,7 +338,8 @@ label {
 
     #head-btns a {
         border-radius: 0;
-        border: 1px 0 1px 0;
+        border-left: 0;
+        border-right: 0;
     }
 
     /* Reports */
@@ -389,11 +390,6 @@ label {
 
     .nav-item a {
         text-align: center;
-    }
-
-    .dropdown .dropdown-menu {
-        border: 2px 0 0 0;
-        border-top-color:#2596be;
     }
 
     #head-img-wrapper {
@@ -463,7 +459,7 @@ label {
     }
 
     #sociallinks>h5,
-    #footer-nav>h5,
+    #footer-nav-title,
     .contact>h5 {
         font-size: 15px;
     }
