--- a/templates/base.html
+++ b/templates/base.html
@@ -111,9 +111,9 @@
                 </p>
                 <h5 class="m-0"><i class="fa-solid fa-envelope"></i> reportsreach@gmail.com</h5>
             </div>
-            <div class="d-sm-block col-6 col-sm-3 d-sm-flex justify-content-start">
+            <div class="d-sm-block col-6 col-sm-3 d-sm-flex flex-column justify-content-start">
+                <h5 id="footer-nav-title" class="text-secondary">Navigation:</h5>
                 <ul id="footer-nav" class="d-flex flex-column">
-                    <h5 class="text-secondary">Navigation:</h5>
                     <li>
                         <a href="{% url 'home' %}">Home</a>
                     </li>
@@ -158,7 +158,6 @@
                     </a>
                 </div>
             </div>
-        </div>
         </div>
     </footer>
 
