--- a/templates/reports.html
+++ b/templates/reports.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+{% load static %}
 
 <!-- Title -->
 <div class="container-fluid p-3 mb-5">
@@ -94,7 +95,7 @@
                 {% endfor %}
                 {% else %}
                 <!-- No images available in report -->
-                <img src="{% static 'images/no-images.png' %}" alt="No images available" class="img-thumbnail">
+                <img src="{% static 'images/no-.png' %}" alt="No images available" class="img-thumbnail">
                 {% endif %}
                 <p class="img-num text-secondary">{{ report.images.all.count }}</p>
             </div>
