--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -106,11 +106,11 @@
                 {% for image_file in report.images.all %}
                 <button type="button" class="report-img col-4" data-bs-toggle="modal"
                     data-bs-target="#myModal{{image_file.pk}}">
-                    <img src="{% static 'images/no-images.png' %}" alt="{{ report.title }}">
+                    <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}">
                 </button>
                 {% endfor %}
                 {% else %}
-                    <img class="col-4 col-lg-6" src="/static/images/no-images.png" alt="No images available">
+                    <img class="col-4 col-lg-6" src="{% static 'images/no-images.png' %}" alt="No images available">
                 {% endif %}
                 <!-- Image Modal -->
                 {% for image_file in report.images.all %}
